--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
     <div class="wrapper">
       <header>
         <h1>another.noise.notes</h1>
+        <p>
+        <a href="https://linkedin.com/in/dmansh">View My LinkedIn Profile</a>
+       <br>
+        <a href="https://github.com/anothernoise">View My GitHub Profile</a>
+        </p>
 
-        <p class="view"><a href="https://linkedin.com/in/dmansh">View My LinkedIn Profile</a></p>
-        <p class="view"><a href="https://github.com/anothernoise">View My GitHub Profile</a></p>
-
-
-        <p class="view"><a href="http://anothernoise.github.io/spark_memsql_prj.html">s </a></p>
+        Notes:
+        <p class="view"><a href="http://anothernoise.github.io/spark_memsql_prj.html">Data Analysys with Spark and Memsql project.</a></p>
 
       </header>
       <section>
@@ -29,7 +31,7 @@
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages">
   <span class="octicon octicon-link"></span></a>Welcome to my notes!</h3>
 
-<p>Hi, I am Dmitry. I am worked </p>
+<p>Hi, I am Dmitry. </p>
 
 <pre>
 <code>
