--- a/spark_memsql_prj.html
+++ b/spark_memsql_prj.html
@@ -26,7 +26,7 @@
         <h3>
 <a name="spark_memsql_prj" class="anchor" href="#spark_memsql_prj"><span class="octicon octicon-link"></span></a>Welcome to Data Analysys with Spark and Memsql project.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>This is project..</p>
 
     <script src="javascripts/scale.fix.js"></script>
 
