--- a/spark_memsql_prj.html
+++ b/spark_memsql_prj.html
@@ -15,11 +15,15 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>anothernoise </h1>
-        <p>blog</p>
+        <h1>another.noise.notes</h1>
+        <p>
+        <a href="https://linkedin.com/in/dmansh">View My LinkedIn Profile</a>
+       <br>
+        <a href="https://github.com/anothernoise">View My GitHub Profile</a>
+        </p>
 
-
-        <p class="view"><a href="https://github.com/anothernoise">View My GitHub Profile</a></p>
+        Notes:
+        <p class="view"><a href="http://anothernoise.github.io/spark_memsql_prj.html">Data Analysys with Spark and Memsql project.</a></p>
 
       </header>
       <section>
