--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Another Noise on github.com</title>
+    <title>Dmitry Shirokov</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -15,7 +15,18 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>another.noise.notes</h1>
+        <h3>Dmitry Shirokov</h3>
+        <p>10+ years of  experience designing data-driven solutions 
+        including:  
+        - Building complex data pipelines and integration, 
+        - Creating analytic frameworks, 
+        - Implemeting Data Lake and Data Earehouses.
+
+        Master's Degree in Information Systems
+        from the <a href="https://eng.mephi.ru/">MEPhI (Russia)</a>   
+        </p>
+        <p>
+        </p>
         <p>
         <a href="https://linkedin.com/in/dmansh">View My LinkedIn Profile</a>
        <br>
@@ -31,7 +42,6 @@
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages">
   <span class="octicon octicon-link"></span></a>Welcome to my notes!</h3>
 
-<p>Hi, I am Dmitry. </p>
 
 <pre>
 <code>
