--- a/index.html
+++ b/index.html
@@ -16,11 +16,17 @@
     <div class="wrapper">
       <header>
         <h3>Dmitry Shirokov</h3>
+
+        <p>
+
+        </p>
+
         <p>10+ years of  experience designing data-driven solutions 
         including:  
         - Building complex data pipelines and integration, 
         - Creating analytic frameworks, 
-        - Implemeting Data Lake and Data Earehouses.
+        - Implemeting Data Lake and Data Earehouses,
+        - Data analytics Pilots and PoC
 
         Master's Degree in Information Systems
         from the <a href="https://eng.mephi.ru/">MEPhI (Russia)</a>   
