--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h3>Dmitry Shirokov</h3>
 
         <p>
-
+          <img src="/images/profile.png">
         </p>
 
         <p>10+ years of  experience designing data-driven solutions 
@@ -41,6 +41,10 @@
 
         Notes:
         <p class="view"><a href="http://anothernoise.github.io/spark_memsql_prj.html">Data Analysys with Spark and Memsql project.</a></p>
+
+        <p> My book </p>
+        <p><img src="/images/tableau_book.jpeg">
+        </p>
 
       </header>
       <section>
