--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h3>Dmitry Shirokov</h3>
 
         <p>
-          <img src="/images/profile.png">
+          <img src="./images/profile.png" style="width: 60%; height: 60%">
         </p>
 
         <p>10+ years of  experience designing data-driven solutions 
@@ -42,8 +42,11 @@
         Notes:
         <p class="view"><a href="http://anothernoise.github.io/spark_memsql_prj.html">Data Analysys with Spark and Memsql project.</a></p>
 
-        <p> My book </p>
-        <p><img src="/images/tableau_book.jpeg">
+        <p> My books </p>
+        <p>
+        <a href="https://www.amazon.ca/Tableau-2019-x-Cookbook-end-end/dp/1789533384/">
+          <img src="./images/tableau_book.jpeg" alt="HTML tutorial" style="width: 30%; height: 30%">
+        </a>
         </p>
 
       </header>
@@ -66,7 +69,7 @@
 
 </section>
       <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small> </small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
