fixed main text of profile

--- a/index.html
+++ b/index.html
@@ -15,21 +15,22 @@
   <body>
     <div class="wrapper">
       <header>
-        <h3>Dmitry Shirokov</h3>
-
+        <h3>Dmitry Shirokov <br>
+        <small>Data Architect  | Data Engineer | Data Analyst<small> </h3> 
         <p>
           <img src="./images/profile.png" style="width: 60%; height: 60%">
         </p>
-
-        <p>10+ years of  experience designing data-driven solutions 
-        including:  
-        - Building complex data pipelines and integration, 
-        - Creating analytic frameworks, 
-        - Implemeting Data Lake and Data Earehouses,
-        - Data analytics Pilots and PoC
-
+        <p>
+        10+ years of  experience designing data-driven solutions including 
+        Building complex data pipelines and integration,
+        implementing Data Lakes and Data Warehouses,
+        creating analytic frameworks,
+        building data analytics pilots and Proof-of-Concept's.
+        
+      </p>
+      <p>
         Master's Degree in Information Systems
-        from the <a href="https://eng.mephi.ru/">MEPhI (Russia)</a>   
+        from the <a href="https://eng.mephi.ru/">MEPhI </a>, Russia.  
         </p>
         <p>
         </p>
@@ -42,7 +43,7 @@
         Notes:
         <p class="view"><a href="http://anothernoise.github.io/spark_memsql_prj.html">Data Analysys with Spark and Memsql project.</a></p>
 
-        <p> My books </p>
+        <p> My contribution in books: </p>
         <p>
         <a href="https://www.amazon.ca/Tableau-2019-x-Cookbook-end-end/dp/1789533384/">
           <img src="./images/tableau_book.jpeg" alt="HTML tutorial" style="width: 30%; height: 30%">
