--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h3>Dmitry Shirokov <br>
         <small>Data Architect  | Data Engineer | Data Analyst<small> </h3> 
         <p>
-          <img src="./images/profile.png" style="width: 60%; height: 60%">
+          <img src="./images/profile_avatar.jpg" style="width: 60%; height: 60%">
         </p>
         <p>
         10+ years of  experience designing data-driven solutions including 
@@ -38,6 +38,8 @@
         <a href="https://linkedin.com/in/dmansh">View My LinkedIn Profile</a>
        <br>
         <a href="https://github.com/anothernoise">View My GitHub Profile</a>
+      <br>
+        <a href="https://medium.com/@anothernoise">View My Blog</a>
         </p>
 
         Notes:
@@ -51,22 +53,28 @@
         </p>
 
       </header>
-      <section>
-        <h3>
+
+
+
+<section>
+<h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages">
-  <span class="octicon octicon-link"></span></a>Welcome to my notes!</h3>
+  <span class="octicon octicon-link"></span></a>My Portfolio</h3>
 
 
 <pre>
 <code>
-
+  val daa = pipeline()
+      .ingest(any_data)
+      .cleanup(_)
+      .agregate(_)
+      .publish(_);
 </code>
 </pre>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 
 <h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>_</h3>
 
 </section>
       <footer>
