--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h3>Dmitry Shirokov <br>
-        <small>Data Architect  | Data Engineer | Data Analyst<small> </h3> 
+        <small>Data Engineer/Architect/Analyst<small> </h3> 
         <p>
           <img src="./images/profile_avatar.jpg" style="width: 70%; height: 70%">
         </p>
