--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h3>Dmitry Shirokov <br>
-        <small>Data Engineer/Architect/Analyst<small> </h3> 
+        <small>Data Engineer | Architect | Analyst<small> </h3> 
         <p>
           <img src="./images/profile_avatar.jpg" style="width: 70%; height: 70%">
         </p>
@@ -39,8 +39,10 @@
        <br>
         <a href="https://github.com/anothernoise">View My GitHub Profile</a>
       <br>
+        <a href="https://www.slideshare.net/DmitryShirokov">View My Slides</a>
+      <br>
         <a href="https://medium.com/@anothernoise">View My Blog</a>
-        </p>
+      </p>
 
         Notes:
         <p class="view"><a href="http://anothernoise.github.io/spark_memsql_prj.html">Data Analysys with Spark and Memsql project.</a></p>
@@ -54,8 +56,6 @@
 
       </header>
 
-
-
 <section>
 <h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages">
@@ -64,14 +64,19 @@
 
 <pre>
 <code>
-  val daa = pipeline()
-      .ingest(any_data)
-      .cleanup(_)
-      .agregate(_)
-      .publish(_);
+  val data = pipeline()
+      .ingest()
+      .cleanup()
+      .aggregate()
+      .publish();
 </code>
 </pre>
 
+<p>
+
+<iframe src="//www.slideshare.net/slideshow/embed_code/key/1lvOqS5equXX1Q" width="600" height="320" frameborder="1" marginwidth="1" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:1px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:2px"> <strong> <a href="//www.slideshare.net/DmitryShirokov/data-pipeline-framework" title="Data Pipeline Framework" target="_blank">Data Pipeline Framework</a> </strong> from <strong><a href="https://www.slideshare.net/DmitryShirokov" target="_blank">Dmitry Shirokov</a></strong> </div>
+
+</p>
 
 <h3>
 <a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>_</h3>
