update index file: add snowflake book cover

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
   </head>
+
   <body>
     <div class="wrapper">
       <header>
@@ -22,7 +23,7 @@
         </p>
         <p>
         10+ years of  experience designing data-driven solutions including 
-        Building complex data pipelines and integration,
+        building complex data pipelines and integration,
         implementing Data Lakes and Data Warehouses,
         creating analytic frameworks,
         building data analytics pilots and Proof-of-Concept's.
@@ -45,13 +46,9 @@
       </p>
 
         Notes:
-        <p class="view"><a href="http://anothernoise.github.io/spark_memsql_prj.html">Data Analysys with Spark and Memsql project.</a></p>
+        <p class="view"><a href="http://anothernoise.github.io/spark_memsql_prj.html">_</a></p>
 
-        <p> My contribution in books: </p>
-        <p>
-        <a href="https://www.amazon.ca/Tableau-2019-x-Cookbook-end-end/dp/1789533384/">
-          <img src="./images/tableau_book.jpeg" alt="HTML tutorial" style="width: 30%; height: 30%">
-        </a>
+
         </p>
 
       </header>
@@ -59,7 +56,8 @@
 <section>
 <h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages">
-  <span class="octicon octicon-link"></span></a>My Portfolio</h3>
+  <span class="octicon octicon-link"></span></a>My Portfolio
+</h3>
 
 
 <pre>
@@ -72,8 +70,27 @@
 </code>
 </pre>
 
+
+<h4>
+<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages">
+  <span class="octicon octicon-link"></span></a>My contribution in books
+</h4>
+<p>
+        <a href="https://www.amazon.ca/Tableau-2019-x-Cookbook-end-end/dp/1789533384/">
+          <img src="./images/tableau_book.jpeg" alt="Tableau cookbook" style="width: 30%; height: 30%">
+        </a>
+        <a href="https://www.amazon.ca/Tableau-2019-x-Cookbook-end-end/dp/1789533384/">
+        <img src="./images/snowflake-cover.png" alt="HTML tutorial" style="width: 25.6%; height: 26%">
+</a>
+
 <p>
 
+
+<h4>
+<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages">
+  <span class="octicon octicon-link"></span></a>My presentation
+</h4>
+<p>
 <iframe src="//www.slideshare.net/slideshow/embed_code/key/1lvOqS5equXX1Q" width="600" height="320" frameborder="1" marginwidth="1" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:1px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:2px"> <strong> <a href="//www.slideshare.net/DmitryShirokov/data-pipeline-framework" title="Data Pipeline Framework" target="_blank">Data Pipeline Framework</a> </strong> from <strong><a href="https://www.slideshare.net/DmitryShirokov" target="_blank">Dmitry Shirokov</a></strong> </div>
 
 </p>
