--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <section>
 <h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages">
-  <span class="octicon octicon-link"></span></a>My Portfolio
+  <span class="octicon octicon-link"></span></a> 
 </h3>
 
 
@@ -88,7 +88,7 @@
 
 <h4>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages">
-  <span class="octicon octicon-link"></span></a>My presentation
+  <span class="octicon octicon-link"></span></a>My presentations
 </h4>
 <p>
 <iframe src="//www.slideshare.net/slideshow/embed_code/key/1lvOqS5equXX1Q" width="600" height="320" frameborder="1" marginwidth="1" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:1px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:2px"> <strong> <a href="//www.slideshare.net/DmitryShirokov/data-pipeline-framework" title="Data Pipeline Framework" target="_blank">Data Pipeline Framework</a> </strong> from <strong><a href="https://www.slideshare.net/DmitryShirokov" target="_blank">Dmitry Shirokov</a></strong> </div>
