--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   val data = pipeline()
       .ingest()
       .cleanup()
-      .aggregate()
+      .enrich()
       .publish();
 </code>
 </pre>
