updated size of cover

--- a/index.html
+++ b/index.html
@@ -33,16 +33,15 @@
         Master's Degree in Information Systems
         from the <a href="https://eng.mephi.ru/">MEPhI </a>, Russia.  
         </p>
+ 
         <p>
-        </p>
-        <p>
-        <a href="https://linkedin.com/in/dmansh">View My LinkedIn Profile</a>
+        <a href="https://linkedin.com/in/dmansh">LinkedIn Profile</a>
        <br>
-        <a href="https://github.com/anothernoise">View My GitHub Profile</a>
+        <a href="https://github.com/anothernoise">GitHub Profile</a>
       <br>
-        <a href="https://www.slideshare.net/DmitryShirokov">View My Slides</a>
+        <a href="https://www.slideshare.net/DmitryShirokov">Slides</a>
       <br>
-        <a href="https://medium.com/@anothernoise">View My Blog</a>
+        <a href="https://medium.com/@anothernoise">Blog</a>
       </p>
 
         Notes:
@@ -73,22 +72,23 @@
 
 <h4>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages">
-  <span class="octicon octicon-link"></span></a>My contribution in books
+  <span class="octicon octicon-link"></span></a>Books 
 </h4>
+
+
 <p>
         <a href="https://www.amazon.ca/Tableau-2019-x-Cookbook-end-end/dp/1789533384/">
           <img src="./images/tableau_book.jpeg" alt="Tableau cookbook" style="width: 30%; height: 30%">
         </a>
         <a href="https://www.amazon.ca/Tableau-2019-x-Cookbook-end-end/dp/1789533384/">
-        <img src="./images/snowflake-cover.png" alt="HTML tutorial" style="width: 25.6%; height: 26%">
-</a>
-
+          <img src="./images/snowflake-cover.png" alt="HTML tutorial" style="width: 29.5%; height: 29.5%">
+        </a>
 <p>
 
 
 <h4>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages">
-  <span class="octicon octicon-link"></span></a>My presentations
+  <span class="octicon octicon-link"></span></a>Presentations
 </h4>
 <p>
 <iframe src="//www.slideshare.net/slideshow/embed_code/key/1lvOqS5equXX1Q" width="600" height="320" frameborder="1" marginwidth="1" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:1px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:2px"> <strong> <a href="//www.slideshare.net/DmitryShirokov/data-pipeline-framework" title="Data Pipeline Framework" target="_blank">Data Pipeline Framework</a> </strong> from <strong><a href="https://www.slideshare.net/DmitryShirokov" target="_blank">Dmitry Shirokov</a></strong> </div>
