update profile photo

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <div class="wrapper">
       <header>
         <h3>Dmitry Shirokov <br>
-        <small>Data Engineer | Architect | Analyst<small> </h3> 
+        <small>Data Engineer | Architect | Analyst | BI<small> </h3> 
         <p>
-          <img src="./images/profile_avatar.jpg" style="width: 70%; height: 70%">
+          <img src="./images/profile_bw.jpg" style="width: 70%; height: 70%">
         </p>
         <p>
         10+ years of  experience designing data-driven solutions including 
