--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         </p>
  
         <p>
-        <a href="https://linkedin.com/in/dmansh">LinkedIn Profile</a>
+        <a href="https://linkedin.com/in/dmansh">LinkedIn</a>
        <br>
-        <a href="https://github.com/anothernoise">GitHub Profile</a>
+        <a href="https://github.com/anothernoise">GitHub</a>
       <br>
         <a href="https://www.slideshare.net/DmitryShirokov">Slides</a>
       <br>
@@ -45,11 +45,10 @@
       </p>
 
         Notes:
-        <p class="view"><a href="http://anothernoise.github.io/spark_memsql_prj.html">_</a></p>
-
-
+        <p class="view">
+          <a href="http://anothernoise.github.io/spark_memsql_prj.html">_</a>
         </p>
-
+     
       </header>
 
 <section>
@@ -78,11 +77,14 @@
 
 <p>
         <a href="https://www.amazon.ca/Tableau-2019-x-Cookbook-end-end/dp/1789533384/">
-          <img src="./images/tableau_book.jpeg" alt="Tableau cookbook" style="width: 30%; height: 30%">
+          <img class="bookback"  src="./images/tableau_book.jpeg" alt="Tableau cookbook" >
+          <img class="bookfront" src="./images/tableau_book.jpeg" alt="Tableau cookbook" >
         </a>
         <a href="https://www.amazon.ca/Tableau-2019-x-Cookbook-end-end/dp/1789533384/">
-          <img src="./images/snowflake-cover.png" alt="HTML tutorial" style="width: 29.5%; height: 29.5%">
+          <img class="bookback"  src="./images/snowflake-cover.png" alt="Snowflake Jumpstart" >
+          <img class="bookfront" src="./images/snowflake-cover.png" alt="Snowflake Jumpstart" >
         </a>
+
 <p>
 
 
@@ -97,6 +99,9 @@
 
 <h3>
 <a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>_</h3>
+
+
+
 
 </section>
       <footer>
