--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
 
 <p>
         <a href="https://www.amazon.ca/Tableau-2019-x-Cookbook-end-end/dp/1789533384/">
-          <img class="bookback"  src="./images/tableau_book.jpeg" alt="Tableau cookbook" >
-          <img class="bookfront" src="./images/tableau_book.jpeg" alt="Tableau cookbook" >
+          <img class="bookback"  src="./images/tableau_book.jpeg" alt="Tableau cookbook" style = "width: 30%; height: 30%;" >
+          <img class="bookfront" src="./images/tableau_book.jpeg" alt="Tableau cookbook" style = "width: 30%; height: 30%;" >
         </a>
         <a href="https://www.amazon.ca/Tableau-2019-x-Cookbook-end-end/dp/1789533384/">
-          <img class="bookback"  src="./images/snowflake-cover.png" alt="Snowflake Jumpstart" >
-          <img class="bookfront" src="./images/snowflake-cover.png" alt="Snowflake Jumpstart" >
+          <img class="bookback"  src="./images/snowflake-cover.png" alt="Snowflake Jumpstart" style = "width: 30%; height: 30%;" >
+          <img class="bookfront" src="./images/snowflake-cover.png" alt="Snowflake Jumpstart" style = "width: 30%; height: 30%;" >
         </a>
 
 <p>
