--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="wrapper">
       <header>
         <h3>Dmitry Shirokov <br>
-        <small>Data Engineer | Architect | Analyst | BI<small> </h3> 
+        <small>Data Architect | Engineer | Analyst | BI & DWH <small> </h3> 
         <p>
           <img src="./images/profile_bw.jpg" style="width: 70%; height: 70%">
         </p>
@@ -64,7 +64,7 @@
       .ingest()
       .cleanup()
       .enrich()
-      .publish();
+      .publish()
 </code>
 </pre>
 
